--- a/PAGES/9g_lazyBroadcasting/index.html
+++ b/PAGES/9g_lazyBroadcasting/index.html
@@ -2592,7 +2592,7 @@ end</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
 <p>Despite their equivalence, you&#39;ll often notice performance differences between broadcasting and for-loops. These discrepancies arise because the compiler applies distinct optimizations to each case.</p>
-<p>It&#39;s also worth remarking that broadcasting isn&#39;t inherently faster than a for-loop, as occurs in the examples. On the contrary, for-loops in Julia are flexible enough to outperform broadcasting, although this requires manual implementation of the necessary optimizations to do so. Considering this, broadcasting in Julia is more about code readability, without sacrificing potential performance significantly. Beyond this, the example&#39;s key takeaway is that <strong>broadcasting ultimately executes a for-loop</strong>.</p>
+<p>It&#39;s also worth remarking that broadcasting isn&#39;t faster than a for-loop, as occurs in the examples. On the contrary, for-loops in Julia are flexible enough to outperform broadcasting, although this requires manually optimizing code. Considering this, broadcasting in Julia is more about code readability, without sacrificing potential performance significantly. Beyond this, the example&#39;s key takeaway is that <strong>broadcasting ultimately executes a for-loop</strong>.</p>
  <!-- Trigger/Open The Modal -->
 <div style="text-indent:0;"> 
   <button class="modalButton">  <strong>REMARK (OPTIONAL)</strong> - Differences in Time Between Broadcasting and For-Loops</button> </div>
@@ -2942,7 +2942,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified June 26, 2024 
+          © Martin Alfaro <br>Last Modified August 22, 2024 
       </span> 
   </div> 
 </footer>
