--- a/PAGES/7b_benchmarks/index.html
+++ b/PAGES/7b_benchmarks/index.html
@@ -2851,7 +2851,7 @@ end</code></pre> </div></div>
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The symbol <code>_</code> is a programming convention to denote &quot;throwaway&quot; variables. They represent variables solely included to satisfy the syntax of an operation, but whose value isn&#39;t actually used. In our case, it reflects that each iteration is performing the same operation for benchmark purposes.</p>
+<p>The symbol <code>_</code> is a programming convention to denote &quot;throwaway&quot; variables. They represent variables solely included to satisfy the syntax of an operation, and their value isn&#39;t actually used. In our case, it reflects that each iteration is performing the same operation for benchmark purposes.</p>
 <p>The example starkly reveals the consequences of calling the function within a for-loop. The execution time of the slow version balloons to more than 20 seconds now, while the fast version does it in under one second. Overall, this unveils the relevance of optimizing functions with repeated or intensive operations, where even slight improvements can have a substantial impact on performance. </p>
 <p>      </div>
     </div>
