--- a/PAGES/8d_barrierFunctions/index.html
+++ b/PAGES/8d_barrierFunctions/index.html
@@ -2654,7 +2654,7 @@ end</code></pre> </div></div>
     </div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The following example demonstrates that the barrier function can alleviate the impact of type instability, even without eliminating it. In the scenario considered, two type-unstable operations are present, and the barrier function targets the one with a more significant impact, which is associated with the for-loop operation.</p>
+<p>The following example demonstrates that the barrier function can alleviate the impact of type instability, even without eliminating it. In the scenario considered, two type-unstable operations are present, and the barrier function targets the one with a more significant impact, which is given by the for-loop operation.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
